google anayl added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </head>
 
 <body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LV2S02136"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6LV2S02136');
+</script>
     <!-- Header Section -->
     <header>
         <div class="container header-container">
