--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         gtag('js', new Date());
         gtag('config', 'G-6LV2S02136');
     </script>
+<link rel="icon" href="data:image/svg+xml;utf8,<svg viewBox='0 0 100 100' width='50' height='50' xmlns='http://www.w3.org/2000/svg'><circle cx='50' cy='50' r='40' fill='%23165a72' /><path d='M50 20 L70 50 L30 50 Z' fill='%23ffffff' /><path d='M30 40 L50 70 L70 40 Z' fill='%2329b6f6' transform='rotate(180 50 55)' /></svg>" type="image/svg+xml">
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
