--- a/index.html
+++ b/index.html
@@ -958,11 +958,8 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <div class="chat-body">
-                <div class="chat-message bot">
-                    <p>Hello! How can we help you today?</p>
-                    <span class="message-time">Just now</span>
-                </div>
+            <div class="chat-body" id="chatBody">
+                <!-- Chat messages will be added here dynamically -->
             </div>
             <div class="chat-footer">
                 <input type="text" placeholder="Type your message..." id="chatInput">
@@ -1099,6 +1096,272 @@
             return cost;
         }
     </script>
+
+    <!-- Add this script before the closing body tag, after emailjs script -->
+    <script>
+        // Initialize EmailJS
+        (function() {
+            emailjs.init("LTWmHe-fQx5R8YbZj"); // Replace with your EmailJS public key
+        })();
+
+        // Chat functionality
+        document.addEventListener('DOMContentLoaded', function() {
+            const chatButton = document.getElementById('chatButton');
+            const chatPopup = document.getElementById('chatPopup');
+            const closeChat = document.getElementById('closeChat');
+            const chatInput = document.getElementById('chatInput');
+            const sendMessage = document.getElementById('sendMessage');
+            const chatBody = document.getElementById('chatBody');
+
+            let conversationState = {
+                step: 'greeting',
+                userData: {
+                    name: '',
+                    email: '',
+                    interest: '',
+                    message: ''
+                }
+            };
+
+            function addBotMessage(message) {
+                const messageDiv = document.createElement('div');
+                messageDiv.className = 'chat-message bot';
+                messageDiv.innerHTML = `
+                    <p>${message}</p>
+                    <span class="message-time">${new Date().toLocaleTimeString()}</span>
+                `;
+                chatBody.appendChild(messageDiv);
+                chatBody.scrollTop = chatBody.scrollHeight;
+            }
+
+            function addUserMessage(message) {
+                const messageDiv = document.createElement('div');
+                messageDiv.className = 'chat-message user';
+                messageDiv.innerHTML = `
+                    <p>${message}</p>
+                    <span class="message-time">${new Date().toLocaleTimeString()}</span>
+                `;
+                chatBody.appendChild(messageDiv);
+                chatBody.scrollTop = chatBody.scrollHeight;
+            }
+
+            function validateEmail(email) {
+                return email.match(/^[^\s@]+@[^\s@]+\.[^\s@]+$/);
+            }
+
+            async function submitChatForm(userData) {
+                try {
+                    // Send email to user
+                    await emailjs.send('service_tlj13aq', 'template_2y4rsbp', {
+                        email: userData.email,
+                        name: userData.name
+                    });
+
+                    // Send email to admin
+                    await emailjs.send('service_tlj13aq', 'template_3u6s00q', {
+                        admin_email: "chemtechcoating@gmail.com",
+                        user_name: userData.name,
+                        user_email: userData.email,
+                        user_message: userData.message,
+                        user_service: userData.interest
+                    });
+
+                    addBotMessage("Thank you for your message! We'll get back to you soon. Is there anything else I can help you with?");
+                    
+                    // Reset conversation
+                    conversationState.step = 'greeting';
+                    conversationState.userData = {
+                        name: '',
+                        email: '',
+                        interest: '',
+                        message: ''
+                    };
+                } catch (error) {
+                    console.error('Error:', error);
+                    addBotMessage("Sorry, there was an error sending your message. Please try again later.");
+                }
+            }
+
+            function handleUserInput(message) {
+                addUserMessage(message);
+
+                switch (conversationState.step) {
+                    case 'greeting':
+                        conversationState.userData.name = message;
+                        conversationState.step = 'email';
+                        addBotMessage(`Nice to meet you, ${message}! Please share your email address so we can stay in touch.`);
+                        break;
+
+                    case 'email':
+                        if (validateEmail(message)) {
+                            conversationState.userData.email = message;
+                            conversationState.step = 'interest';
+                            addBotMessage("What service are you interested in? Choose from:\n1. Industrial Flooring\n2. Commercial Spaces\n3. Residential Solutions\n4. Waterproofing");
+                        } else {
+                            addBotMessage("Please enter a valid email address.");
+                        }
+                        break;
+
+                    case 'interest':
+                        conversationState.userData.interest = message;
+                        conversationState.step = 'message';
+                        addBotMessage("Great choice! Please tell me more about your requirements or any questions you have.");
+                        break;
+
+                    case 'message':
+                        conversationState.userData.message = message;
+                        submitChatForm(conversationState.userData);
+                        break;
+                }
+            }
+
+            // Event Listeners
+            chatButton.addEventListener('click', () => {
+                chatPopup.classList.toggle('show');
+                if (chatBody.children.length === 0) {
+                    addBotMessage("Hello! I'm here to help you. What's your name?");
+                }
+            });
+
+            closeChat.addEventListener('click', () => {
+                chatPopup.classList.remove('show');
+            });
+
+            function sendChatMessage() {
+                const message = chatInput.value.trim();
+                if (message) {
+                    handleUserInput(message);
+                    chatInput.value = '';
+                }
+            }
+
+            sendMessage.addEventListener('click', sendChatMessage);
+            chatInput.addEventListener('keypress', (e) => {
+                if (e.key === 'Enter') {
+                    sendChatMessage();
+                }
+            });
+        });
+    </script>
+
+    <!-- Add these styles to your existing CSS or in a style tag -->
+    <style>
+        .floating-chat {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+
+        .chat-button {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            cursor: pointer;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+        }
+
+        .chat-button i {
+            font-size: 24px;
+        }
+
+        .chat-popup {
+            position: fixed;
+            bottom: 100px;
+            right: 20px;
+            width: 300px;
+            height: 400px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            display: none;
+            flex-direction: column;
+        }
+
+        .chat-popup.show {
+            display: flex;
+        }
+
+        .chat-header {
+            padding: 15px;
+            background: var(--primary-color);
+            color: white;
+            border-radius: 10px 10px 0 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .chat-header h3 {
+            margin: 0;
+        }
+
+        .close-chat {
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+
+        .chat-body {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+        }
+
+        .chat-message {
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 10px;
+            max-width: 80%;
+        }
+
+        .chat-message.bot {
+            background: #f0f0f0;
+            margin-right: auto;
+        }
+
+        .chat-message.user {
+            background: var(--primary-color);
+            color: white;
+            margin-left: auto;
+        }
+
+        .message-time {
+            font-size: 0.8em;
+            opacity: 0.7;
+            margin-top: 5px;
+            display: block;
+        }
+
+        .chat-footer {
+            padding: 15px;
+            border-top: 1px solid #eee;
+            display: flex;
+            gap: 10px;
+        }
+
+        .chat-footer input {
+            flex: 1;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 20px;
+            outline: none;
+        }
+
+        .chat-footer button {
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+            cursor: pointer;
+        }
+    </style>
 </body>
 
 </html>
