Add Before/After Slider Section with Images and Styles

--- a/index.html
+++ b/index.html
@@ -420,6 +420,30 @@
         </div>
     </section>
 
+    <!-- Before After Slider Section -->
+    <section class="before-after-section">
+        <div class="container">
+            <div class="section-header animate-slide-up">
+                <span class="section-subtitle">Our Work</span>
+                <h2 class="section-title">Before & After</h2>
+                <p class="section-description">See the transformation with our premium epoxy coating solutions</p>
+            </div>
+            
+            <div class="before-after-container">
+                <div class="before-after-slider">
+                    <img src="Reso/before-epoxy.jpg" alt="Before Epoxy Coating" class="before-image">
+                    <img src="Reso/after-epoxy.jpg" alt="After Epoxy Coating" class="after-image">
+                    <div class="slider-line"></div>
+                    <div class="slider-button">
+                        <i class="fas fa-arrows-alt-v"></i>
+                    </div>
+                    <div class="before-label">Before</div>
+                    <div class="after-label">After</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Products Section -->
     <section class="products" id="products">
         <div class="container">
