Add chat and product stylesheets with preload links in the head section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
     <!-- Add this in the head section after your main CSS -->
     <link rel="stylesheet" href="css/features.css">
+    <link rel="stylesheet" href="css/modules/chat.css">
+    <link rel="stylesheet" href="css/modules/products.css">
 
     <!-- Add this in the head section -->
     <script type="application/ld+json">
@@ -142,6 +144,8 @@
     <!-- Add these to the head section -->
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="preload" href="css/features.css" as="style">
+    <link rel="preload" href="css/modules/chat.css" as="style">
+    <link rel="preload" href="css/modules/products.css" as="style">
     <link rel="preload" href="Reso/hero-bg.jpg" as="image">
     <link rel="preload" href="js/scripts.js" as="script">
 
