--- a/index.html
+++ b/index.html
@@ -960,41 +960,202 @@
         </div>
     </section>
 
-    <!-- Add this after the Products section -->
+    <!-- Portfolio Section -->
     <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="section-header animate-slide-up">
                 <span class="section-subtitle">Our Work</span>
                 <h2 class="section-title">Recent Projects</h2>
-                <p class="section-description">See how our epoxy solutions have transformed spaces for our clients.</p>
+                <p class="section-description">See how our epoxy solutions have transformed industrial and commercial spaces.</p>
             </div>
 
             <div class="portfolio-filter">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="industrial">Industrial</button>
                 <button class="filter-btn" data-filter="commercial">Commercial</button>
-                <button class="filter-btn" data-filter="residential">Residential</button>
+                <button class="filter-btn" data-filter="specialized">Specialized</button>
             </div>
 
             <div class="portfolio-grid">
-                <!-- Industrial Projects -->
+                <!-- Industrial Project 1 -->
                 <div class="portfolio-item industrial">
                     <div class="portfolio-image">
-                        <img src="Reso/portfolio/industrial-1.jpg" alt="Industrial Flooring Project">
+                        <img src="Reso/projects/white-epoxy.jpg" alt="White Epoxy Industrial Flooring">
                         <div class="portfolio-overlay">
                             <div class="portfolio-info">
-                                <h3>Manufacturing Facility Floor</h3>
-                                <p>Heavy-duty epoxy flooring for a manufacturing plant</p>
+                                <h3>Industrial Manufacturing Facility</h3>
+                                <p>Premium white epoxy flooring installation with seamless finish and high durability</p>
                                 <a href="#" class="portfolio-link">View Details</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Add more portfolio items for each category -->
+                <!-- Industrial Project 2 -->
+                <div class="portfolio-item industrial specialized">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/green-epoxy.jpg" alt="Green Epoxy Industrial Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Precision Manufacturing Unit</h3>
+                                <p>High-performance green epoxy flooring for specialized manufacturing equipment area</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Industrial Project 3 -->
+                <div class="portfolio-item industrial commercial">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/yellow-epoxy.jpg" alt="Yellow Safety Line Epoxy Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Warehouse Safety Flooring</h3>
+                                <p>Safety-enhanced epoxy flooring with high-visibility yellow demarcation lines</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <style>
+    /* Portfolio Section Styles */
+    .portfolio {
+        padding: 80px 0;
+        background: #f9f9f9;
+    }
+
+    .portfolio-filter {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+        margin-bottom: 40px;
+    }
+
+    .filter-btn {
+        padding: 8px 20px;
+        border: 2px solid var(--primary-color);
+        background: transparent;
+        color: var(--primary-color);
+        border-radius: 25px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-weight: 500;
+    }
+
+    .filter-btn.active,
+    .filter-btn:hover {
+        background: var(--primary-color);
+        color: white;
+    }
+
+    .portfolio-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 30px;
+        padding: 20px;
+    }
+
+    .portfolio-item {
+        border-radius: 12px;
+        overflow: hidden;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        transition: transform 0.3s ease;
+        position: relative;
+    }
+
+    .portfolio-item:hover {
+        transform: translateY(-10px);
+    }
+
+    .portfolio-image {
+        position: relative;
+        overflow: hidden;
+        aspect-ratio: 4/3;
+    }
+
+    .portfolio-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.5s ease;
+    }
+
+    .portfolio-item:hover .portfolio-image img {
+        transform: scale(1.1);
+    }
+
+    .portfolio-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(22, 90, 114, 0.9);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+    .portfolio-item:hover .portfolio-overlay {
+        opacity: 1;
+    }
+
+    .portfolio-info {
+        color: white;
+        text-align: center;
+        padding: 20px;
+        transform: translateY(20px);
+        transition: transform 0.3s ease;
+    }
+
+    .portfolio-item:hover .portfolio-info {
+        transform: translateY(0);
+    }
+
+    .portfolio-info h3 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+
+    .portfolio-info p {
+        font-size: 0.9rem;
+        margin-bottom: 15px;
+    }
+
+    .portfolio-link {
+        display: inline-block;
+        padding: 8px 20px;
+        background: white;
+        color: var(--primary-color);
+        text-decoration: none;
+        border-radius: 25px;
+        transition: all 0.3s ease;
+    }
+
+    .portfolio-link:hover {
+        background: var(--primary-color);
+        color: white;
+    }
+
+    @media (max-width: 768px) {
+        .portfolio-filter {
+            flex-wrap: wrap;
+        }
+        
+        .portfolio-grid {
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 10px;
+        }
+    }
+    </style>
 
     <!-- About Section -->
     <section class="about" id="about">
