Update favicon links and replace logo SVG with image; adjust theme colors and logo text styles

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         gtag('js', new Date());
         gtag('config', 'G-6LV2S02136');
     </script>
-    <link rel="icon"
-        href="data:image/svg+xml;utf8,<svg viewBox='0 0 100 100' width='50' height='50' xmlns='http://www.w3.org/2000/svg'><circle cx='50' cy='50' r='40' fill='%23165a72' /><path d='M50 20 L70 50 L30 50 Z' fill='%23ffffff' /><path d='M30 40 L50 70 L70 40 Z' fill='%2329b6f6' transform='rotate(180 50 55)' /></svg>"
-        type="image/svg+xml">
+    <link rel="icon" type="image/svg+xml" href="Reso/portfolio/logo.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="Reso/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Reso/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Reso/apple-touch-icon.png">
+    <link rel="mask-icon" href="Reso/safari-pinned-tab.svg" color="#000080">
 
     <!-- Add this in the head section -->
-    <meta name="theme-color" content="#165a72">
+    <meta name="theme-color" content="#000080">
     <link rel="manifest" href="manifest.json">
 
     <!-- Add this in the head section after your main CSS -->
@@ -170,8 +172,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Reso/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Reso/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Reso/favicon-16x16.png">
-    <link rel="mask-icon" href="Reso/safari-pinned-tab.svg" color="#165a72">
-    <meta name="msapplication-TileColor" content="#165a72">
+    <link rel="mask-icon" href="Reso/safari-pinned-tab.svg" color="#000080">
+    <meta name="msapplication-TileColor" content="#000080">
 
     <!-- Add security headers -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
@@ -233,30 +235,11 @@
         <div class="container header-container">
             <div class="logo">
                 <div class="logo-icon">
-                    <svg viewBox="0 0 100 100" width="50" height="50">
-                        <!-- Abstract background shape -->
-                        <path d="M15,50 Q25,20 50,15 Q75,20 85,50 Q75,80 50,85 Q25,80 15,50 Z" fill="#165a72" />
-
-                        <!-- Dynamic flowing epoxy pattern -->
-                        <path d="M30,50 Q40,35 50,33 Q60,35 70,50 Q60,65 50,67 Q40,65 30,50 Z" fill="#29b6f6"
-                            opacity="0.8" />
-
-                        <!-- Molecule structure suggestion -->
-                        <circle cx="50" cy="40" r="4" fill="white" />
-                        <circle cx="40" cy="50" r="4" fill="white" />
-                        <circle cx="60" cy="50" r="4" fill="white" />
-                        <circle cx="50" cy="60" r="4" fill="white" />
-
-                        <!-- Connecting lines -->
-                        <line x1="50" y1="40" x2="40" y2="50" stroke="white" stroke-width="1.5" />
-                        <line x1="50" y1="40" x2="60" y2="50" stroke="white" stroke-width="1.5" />
-                        <line x1="40" y1="50" x2="50" y2="60" stroke="white" stroke-width="1.5" />
-                        <line x1="60" y1="50" x2="50" y2="60" stroke="white" stroke-width="1.5" />
-                    </svg>
+                    <img src="Reso/portfolio/logo.svg" alt="Chemtech Logo" width="80" height="80" style="object-fit: contain;">
                 </div>
                 <div class="logo-text">
-                    <span class="logo-name">CHEMTECH</span>
-                    <span class="logo-tagline">INNOVATIVE COATING SYSTEMS</span>
+                    <span class="logo-name" style="color: #002B5B; font-weight: bold;">CHEMTECH</span>
+                    <span class="logo-tagline" style="color: #335B7E; font-size: 0.8em;">COATING SOLUTIONS</span>
                 </div>
             </div>
             <div class="menu-btn" id="menuBtn">
