Update project portfolio with new industrial and commercial flooring examples; modify address details for improved accuracy

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       "priceRange": "₹₹-₹₹₹",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Your Street Address",
-        "addressLocality": "Your City",
+        "streetAddress": "Plot no. 182/2, near MSEB office, karjat - murbad highway, ware villege",
+        "addressLocality": "Karjat",
         "addressRegion": "Maharashtra",
-        "postalCode": "Your PIN",
+        "postalCode": "410101",
         "addressCountry": "IN"
       },
       "geo": {
@@ -963,6 +963,118 @@
                 <!-- Industrial Project 1 -->
                 <div class="portfolio-item industrial">
                     <div class="portfolio-image">
+                        <img src="Reso/projects/proj4.jpg" alt="Industrial Epoxy Flooring Project">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Heavy-Duty Manufacturing Floor</h3>
+                                <p>Industrial-grade epoxy coating with superior chemical resistance and durability</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Industrial Project 2 -->
+                <div class="portfolio-item industrial specialized">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj5.jpg" alt="Specialized Industrial Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Precision Engineering Facility</h3>
+                                <p>Anti-static epoxy flooring system for sensitive electronic manufacturing</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Commercial Project 1 -->
+                <div class="portfolio-item commercial">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj6.jpg" alt="Commercial Epoxy Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Retail Space Transformation</h3>
+                                <p>Decorative epoxy flooring with high gloss finish for retail environment</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Industrial Project 3 -->
+                <div class="portfolio-item industrial">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj7.jpg" alt="Industrial Warehouse Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Logistics Center Floor</h3>
+                                <p>High-traffic epoxy coating with line marking for warehouse operations</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Specialized Project 1 -->
+                <div class="portfolio-item specialized">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj8.jpg" alt="Specialized Epoxy Application">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Clean Room Facility</h3>
+                                <p>Antimicrobial epoxy flooring system for pharmaceutical manufacturing</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Commercial Project 2 -->
+                <div class="portfolio-item commercial">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj9.jpg" alt="Commercial Space Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Corporate Office Complex</h3>
+                                <p>Designer epoxy flooring with custom patterns for modern office space</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Specialized Project 2 -->
+                <div class="portfolio-item specialized">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj10.jpg" alt="Specialized Industrial Application">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Food Processing Facility</h3>
+                                <p>USDA-compliant epoxy flooring system with thermal shock resistance</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Commercial Project 3 -->
+                <div class="portfolio-item commercial">
+                    <div class="portfolio-image">
+                        <img src="Reso/projects/proj11.jpg" alt="Commercial Facility Flooring">
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Healthcare Center</h3>
+                                <p>Seamless epoxy flooring with enhanced hygiene properties for medical facilities</p>
+                                <a href="#" class="portfolio-link">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Base Epoxy Projects -->
+                <div class="portfolio-item industrial commercial">
+                    <div class="portfolio-image">
                         <img src="Reso/projects/white-epoxy.jpg" alt="White Epoxy Industrial Flooring">
                         <div class="portfolio-overlay">
                             <div class="portfolio-info">
@@ -974,7 +1086,6 @@
                     </div>
                 </div>
 
-                <!-- Industrial Project 2 -->
                 <div class="portfolio-item industrial specialized">
                     <div class="portfolio-image">
                         <img src="Reso/projects/green-epoxy.jpg" alt="Green Epoxy Industrial Flooring">
@@ -988,7 +1099,6 @@
                     </div>
                 </div>
 
-                <!-- Industrial Project 3 -->
                 <div class="portfolio-item industrial commercial">
                     <div class="portfolio-image">
                         <img src="Reso/projects/yellow-epoxy.jpg" alt="Yellow Safety Line Epoxy Flooring">
@@ -1414,7 +1524,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Our Location</h3>
-                            <p>Office Address Here, City, State, PIN</p>
+                            <p>Plot no. 182/2, near MSEB office,<br>karjat - murbad highway, ware villege,<br>Tal - karjat, Dist - raigad<br>410101</p>
                         </div>
                     </div>
                     <div class="contact-card animate-fadeInLeft delay-200">
