--- a/index.html
+++ b/index.html
@@ -251,16 +251,24 @@
 
     .logo-loader {
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     .rotating-logo {
         width: 100px;
         height: 100px;
         animation: rotateLogo 2s infinite ease-in-out;
+        margin-bottom: 20px;
     }
 
     .loading-text {
-        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2px;
         font-family: 'Montserrat', sans-serif;
         font-weight: bold;
     }
