Update navigation links and create services page; change services link to point to services.html and remove services section from index.html, adding detailed service offerings in the new services.html file.

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <nav>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="#home" class="nav-link">Home</a></li>
-                    <li><a href="#services" class="nav-link">Services</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
                     <li><a href="#products" class="nav-link">Products</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#contact" class="nav-link contact-btn">Contact Us</a></li>
@@ -373,92 +373,6 @@
                     </div>
                     <h3>Quality Guaranteed</h3>
                     <p>All products undergo rigorous quality testing and certification.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services" id="services">
-        <div class="container">
-            <div class="section-header animate-slide-up">
-                <span class="section-subtitle">Our Services</span>
-                <h2 class="section-title">Industrial & Commercial Flooring</h2>
-                <p class="section-description">Professional flooring solutions for industrial and commercial
-                    applications</p>
-            </div>
-
-            <div class="services-grid">
-                <!-- Protective Solutions -->
-                <div class="service-category">
-                    <div class="category-header">
-                        <h3>Protective Solutions</h3>
-                    </div>
-                    <div class="category-content">
-                        <ul class="service-list">
-                            <li>
-                                <span class="service-name">Heavy Duty Epoxy Flooring System</span>
-                                <span class="service-description">Durable flooring solution for high-traffic industrial
-                                    areas</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Self Level Epoxy Flooring System</span>
-                                <span class="service-description">Seamless and level flooring for commercial
-                                    spaces</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Chemical Resistance Epoxy Flooring</span>
-                                <span class="service-description">Specialized flooring resistant to chemical
-                                    exposure</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Aesthetic Solutions -->
-                <div class="service-category">
-                    <div class="category-header">
-                        <h3>Aesthetic Solutions</h3>
-                    </div>
-                    <div class="category-content">
-                        <ul class="service-list">
-                            <li>
-                                <span class="service-name">Decorative Epoxy Flooring</span>
-                                <span class="service-description">Custom designs and patterns</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Metallic Epoxy Flooring</span>
-                                <span class="service-description">Luxurious metallic finishes</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Self Levelling Floor Topping</span>
-                                <span class="service-description">Smooth, seamless surfaces</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Maintenance Solutions -->
-                <div class="service-category">
-                    <div class="category-header">
-                        <h3>Maintenance Solutions</h3>
-                    </div>
-                    <div class="category-content">
-                        <ul class="service-list">
-                            <li>
-                                <span class="service-name">Automotive Industry</span>
-                                <span class="service-description">Specialized solutions for automotive facilities</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Steel & Fertilizer Plants</span>
-                                <span class="service-description">Heavy-duty industrial coatings</span>
-                            </li>
-                            <li>
-                                <span class="service-name">Paper & Pulp Mills</span>
-                                <span class="service-description">Chemical resistant flooring solutions</span>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
