Revamp footer section in products.html; add detailed company information, quick links, and contact details, while updating design attribution to include a hyperlink for improved accessibility.

--- a/products.html
+++ b/products.html
@@ -286,9 +286,47 @@
     </section>
 
     <!-- Footer (Same as index.html) -->
-    <footer>
-        <!-- Footer content -->
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+        <div class="footer-container">
+            <div class="footer-about">
+                <div class="footer-logo">
+                    <h2>CHEMTECH</h2>
+                    <p>PREMIUM EPOXY SOLUTIONS</p>
+                </div>
+                <p>Delivering high-quality epoxy coating and waterproofing solutions for industrial, commercial, and residential applications.</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact Info</h3>
+                <p><i class="fas fa-user"></i> Mr. Ajay Choure, Proprietor</p>
+                <p><i class="fas fa-phone"></i> +91 9834094310</p>
+                <p><i class="fas fa-envelope"></i> chemtechcoating@gmail.com</p>
+                <p><i class="fas fa-globe"></i> chemtechcoating.in</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 Chemtech Coating Solution. All Rights Reserved.</p>
+            <p><a href="https://akshayyborade.github.io/PremateSoftSolution/" target="_blank">Design by Premate Software Solution Pvt Ltd</a></p>
+        </div>
+    </div>
+</footer>
 
     <script>
         // Product filtering
