--- a/services.html
+++ b/services.html
@@ -488,7 +488,7 @@
             </div>
             <div class="copyright">
                 <p>&copy; 2025 Chemtech Coating Solution. All Rights Reserved.</p>
-                <p>Design by Premate Software Solution Pvt Ltd</p>
+                <p><a href="https://akshayyborade.github.io/PremateSoftSolution/" target="_blank">Design by Premate Software Solution Pvt Ltd</a></p>
             </div>
         </div>
     </footer>
