Update footer contact information in index.html; simplify proprietor title for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-user"></i> Mr. Ajay Choure, Proprietor</p>
+                    <p><i class="fas fa-user"></i> Ajay Choure</p>
                     <p><i class="fas fa-phone"></i> +91 9834094310</p>
                     <p><i class="fas fa-envelope"></i> chemtechcoating@gmail.com</p>
                     <p><i class="fas fa-globe"></i> chemtechcoating.in</p>
