--- a/products.html
+++ b/products.html
@@ -133,6 +133,58 @@
                 flex-direction: column;
                 align-items: center;
             }
+
+            .menu-btn {
+                display: block;
+            }
+
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                width: 70%;
+                height: 100vh;
+                background: #002B5B;
+                flex-direction: column;
+                padding: 2rem;
+                transition: 0.3s;
+                z-index: 1000;
+            }
+
+            .nav-links.active {
+                right: 0;
+            }
+
+            .nav-links li {
+                margin: 1rem 0;
+            }
+
+            .nav-links a {
+                color: white;
+                font-size: 1.2rem;
+            }
+
+            .nav-links a:hover {
+                color: #4CAF50;
+            }
+
+            .contact-btn {
+                background: transparent;
+                border: 2px solid white;
+            }
+
+            .contact-btn:hover {
+                background: white;
+                color: #002B5B;
+            }
+        }
+
+        /* Add these styles for mobile menu */
+        .menu-btn {
+            display: none;
+            cursor: pointer;
+            font-size: 1.5rem;
+            color: #002B5B;
         }
     </style>
 </head>
@@ -148,6 +200,9 @@
                     <span class="logo-name">CHEMTECH</span>
                     <span class="logo-tagline">COATING SOLUTIONS</span>
                 </div>
+            </div>
+            <div class="menu-btn" id="menuBtn">
+                <i class="fas fa-bars"></i>
             </div>
             <nav>
                 <ul class="nav-links" id="navLinks">
@@ -329,6 +384,32 @@
 </footer>
 
     <script>
+        // Mobile menu functionality
+        const menuBtn = document.getElementById('menuBtn');
+        const navLinks = document.getElementById('navLinks');
+
+        menuBtn.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            menuBtn.classList.toggle('active');
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!menuBtn.contains(e.target) && !navLinks.contains(e.target)) {
+                navLinks.classList.remove('active');
+                menuBtn.classList.remove('active');
+            }
+        });
+
+        // Close menu when clicking a link
+        const navItems = document.querySelectorAll('.nav-links a');
+        navItems.forEach(item => {
+            item.addEventListener('click', () => {
+                navLinks.classList.remove('active');
+                menuBtn.classList.remove('active');
+            });
+        });
+
         // Product filtering
         const filterBtns = document.querySelectorAll('.filter-btn');
         const productCards = document.querySelectorAll('.product-card');
