Update contact details in index.html for improved clarity and formatting; enhance address presentation with proper capitalization and line breaks.

--- a/index.html
+++ b/index.html
@@ -842,8 +842,11 @@
                         </div>
                         <div class="contact-details">
                             <h3>Our Location</h3>
-                            <p>Plot no. 182/2, near MSEB office,<br>karjat - murbad highway, ware villege,<br>Tal -
-                                karjat, Dist - raigad<br>410101</p>
+                            <p>Plot No. 182/2, Near MSEB Office<br>
+                               Karjat - Murbad Highway<br>
+                               Ware Village, Taluka - Karjat<br>
+                               District - Raigad<br>
+                               Maharashtra - 410101</p>
                         </div>
                     </div>
                     <div class="contact-card animate-fadeInLeft delay-200">
